[metadata]
name = geodn
version = attr: geodn.__version__
author = 汪心禾
author_email = wangxinhe06@gmail.com
description = Geo Domain Name
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wxh06/geodn
download_url = https://pypi.org/simple/geodn/
project_urls =
    Bug Tracker = https://github.com/wxh06/geodn/issues
    Documentation = https://github.com/wxh06/geodn#readme
    Release notes = https://github.com/wxh06/geodn/releases
    Source Code = https://github.com/wxh06/geodn
keywords = geolocation, geoip, geoip-database, geolite2, geolite2-country, domain-name
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
packages = find:
install_requires = 
    requests>=2
    geoip2

[options.package_data]
geodn = GeoLite2*/*
